--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -9,6 +9,7 @@ $blue: #1C1D4E;
 $dodger: #1045D3;
 $purple: #8E7FFC;
 $teal: #21EAC5;
+$new: #56536B;
 
 $xs: 0.75rem;
 $sm: 0.875rem;
@@ -63,6 +64,7 @@ body {
   margin: 0;
   font-family: 'Albert Sans', sans-serif;
   border-right: 0.25rem solid $yellow;
+  color: $black;
 }
 
 figure#logo {
@@ -92,7 +94,7 @@ menu {
     margin-inline-start: 0.75rem;
     text-transform: uppercase;
     letter-spacing: 0.1rem;
-    font-weight: 600;
+    font-weight: 500;
     font-size: $xs;
     white-space: nowrap;
     transition-property: color, background-color;
@@ -116,16 +118,22 @@ nav#light-mode {
   border-color: $darkgrey;
   top: -0.1em;
   z-index: 1;
-
+  a:hover h3,
+  a:focus h3,
+  a:hover h4,
+  a:focus h4,
+  a:hover dt,
+  a:focus dt,
+  a:hover,
+  a:focus {
+    color: $dodger;
+  }
   menu {
     li {
       a {
         color: $black;
       }
-      a:hover,
-      a:focus {
-        color: $dodger;
-      }
+
       button {
         color: $black;
 
@@ -171,6 +179,10 @@ nav#light-mode {
 
   aside {
     menu {
+      a:hover,
+      a:focus {
+        color: $dodger;
+      }
       a {
         color: $night;
       }
@@ -194,7 +206,16 @@ nav {
   gap: 2rem;
   padding: 0 6rem;
   z-index: 3;
-
+  a:hover h3,
+  a:focus h3,
+  a:hover h4,
+  a:focus h4,
+  a:hover dt,
+  a:focus dt,
+  a:hover,
+  a:focus {
+    color: $dodger;
+  }
   .hamburger {
     display: none;
     button {
@@ -403,7 +424,9 @@ nav {
             padding: 0;
           }
         }
-
+        dt {
+          color: $blue;
+        }
         a {
           color: $black;
           display: flex;
@@ -438,9 +461,10 @@ nav {
         a h4 {
           text-transform: uppercase;
           letter-spacing: 0.15rem;
-          font-weight: 400;
+          font-weight: 500;
           font-size: $xs;
           padding: 1rem 2rem;
+          color: $new;
         }
         a.arrow-link {
           * {
@@ -466,7 +490,7 @@ nav {
           text-transform: uppercase;
           letter-spacing: 0.1rem;
           font-size: $xs;
-          font-weight: 600;
+          font-weight: 500;
           padding-block-start: 0.5rem;
         }
 
@@ -478,13 +502,14 @@ nav {
           font-size: $xs;
           font-weight: 400;
           letter-spacing: 0.01em;
-          color: $black;
+          color: $new;
         }
 
         dt h3 {
           font-size: $md;
           text-transform: none;
-          font-weight: 600;
+          color: $blue;
+          font-weight: 500;
           letter-spacing: 0.01rem;
           margin-block-end: 0.5rem;
         }
@@ -498,7 +523,10 @@ nav {
     menu {
       justify-content: flex-end;
       align-items: center;
-
+      a:hover,
+      a:focus {
+        color: $yellow;
+      }
       a {
         font-size: $sm;
         color: $grey;
@@ -517,6 +545,14 @@ nav {
   .wide section {
     flex-direction: column;
     width: 48rem;
+    dl a {
+      text-transform: uppercase;
+      letter-spacing: 0.1rem;
+      font-size: $xs;
+      font-weight: 500;
+      padding-block-start: 0.5rem;
+      color: $blue;
+    }
     .wide-wrap {
       display: flex;
       flex-direction: row;
@@ -551,7 +587,7 @@ main {
   }
 
   b {
-    font-weight: 500;
+    font-weight: 400;
   }
 
   .txt-style-wrapper {
@@ -649,8 +685,8 @@ main {
   .s1 {
     text-transform: uppercase;
     letter-spacing: 0.2em;
-
-    div:nth-child(even) {
+    font-weight: 500;
+    p:nth-child(even) {
       color: $teal;
     }
   }
@@ -659,8 +695,8 @@ main {
     text-transform: uppercase;
     letter-spacing: 0.15em;
     font-size: $sm;
-
-    div:nth-child(even) {
+    font-weight: 500;
+    p:nth-child(even) {
       color: #93e4d5;
     }
   }
@@ -669,6 +705,7 @@ main {
     text-transform: uppercase;
     letter-spacing: 0.1em;
     font-size: $xs;
+    font-weight: 500;
   }
 
   .color-wrapper,
@@ -736,7 +773,7 @@ main {
     }
 
     .dark-grey dt {
-      background-color: $grey;
+      background-color: $darkgrey;
     }
 
     .grey dt {
@@ -1199,7 +1236,7 @@ footer {
         span {
           flex-basis: 0.12rem;
           width: 100%;
-          background-color: $black;
+          background-color: $blue;
           transition: all ease-in-out 0.2s;
         }
       }
