fixed button styling for ios

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -41,6 +41,7 @@ h6 {
 input,
 button {
   font-family: 'Albert Sans', sans-serif;
+  margin: 0;
 }
 
 button {
@@ -662,7 +663,7 @@ main {
 
   .t6 {
     font-size: $xl;
-    font-weight: 500;
+    font-weight: 400;
     line-height: 1.3;
   }
 
