--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ h6 {
 input,
 button {
   font-family: "Albert Sans", sans-serif;
+  margin: 0;
 }
 
 button {
@@ -541,7 +542,7 @@ main .t5 {
 }
 main .t6 {
   font-size: 2rem;
-  font-weight: 500;
+  font-weight: 400;
   line-height: 1.3;
 }
 main .p1 {
