--- a/css/main.css
+++ b/css/main.css
@@ -37,14 +37,14 @@ input[type=radio] {
 }
 
 :root {
-  font-size: 1.25vw;
+  font-size: 1.05vw;
 }
 
 body {
   margin: 0;
   font-family: "Albert Sans", sans-serif;
   border-right: 0.25rem solid #E3FF53;
-  color: #0A0A17;
+  color: #1C1D4E;
 }
 
 figure#logo {
@@ -474,6 +474,11 @@ nav .wide section .subnav-wrapper:nth-child(even) dl {
 
 main {
   position: relative;
+  color: #1C1D4E;
+}
+main p span {
+  display: block;
+  max-width: 48ch;
 }
 main section + section {
   padding-block-start: 2rem;
@@ -896,10 +901,12 @@ footer menu a:focus {
   color: #E3FF53;
 }
 
-@media (max-width: 1440px) {
+@media (max-width: 1680px) {
   :root {
-    font-size: 1.0625rem;
+    font-size: 1rem;
   }
+}
+@media (max-width: 1440px) {
   nav,
   footer {
     padding-inline: 4rem;
@@ -914,9 +921,6 @@ footer menu a:focus {
   }
 }
 @media (max-width: 1280px) {
-  :root {
-    font-size: 1rem;
-  }
   nav,
   footer {
     padding-inline: 2rem;
