--- a/css/main.css
+++ b/css/main.css
@@ -381,6 +381,9 @@ nav menu li section a h4 {
   padding: 1rem 2rem;
   color: #56536B;
 }
+nav menu li section a.arrow-link {
+  flex-grow: 1;
+}
 nav menu li section a.arrow-link * {
   display: flex;
   align-items: center;
@@ -998,13 +1001,13 @@ footer menu a:focus {
     pointer-events: none;
   }
   nav:focus-within .hamburger button span:nth-child(1) {
-    transform: translateY(0.425rem) rotate(-45deg);
+    transform: translateY(0.5rem) rotate(-45deg);
   }
   nav:focus-within .hamburger button span:nth-child(2) {
     opacity: 0;
   }
   nav:focus-within .hamburger button span:nth-child(3) {
-    transform: translateY(-0.425rem) rotate(45deg);
+    transform: translateY(-0.5rem) rotate(45deg);
   }
   nav {
     display: none;
@@ -1030,7 +1033,7 @@ footer menu a:focus {
     cursor: pointer;
   }
   nav .hamburger button span {
-    flex-basis: 0.12rem;
+    flex-basis: 1%;
     width: 100%;
     background-color: #1C1D4E;
     transition: all ease-in-out 0.2s;
@@ -1173,7 +1176,7 @@ footer menu a:focus {
     font-size: 2rem;
   }
   nav .list-wrapper menu li section {
-    width: 20rem;
+    width: 24rem;
   }
   nav .list-wrapper menu .cta-button a {
     font-size: 1rem;
@@ -1241,25 +1244,35 @@ footer menu a:focus {
     background-position: 0;
     margin-block-start: 4rem;
   }
+  nav .list-wrapper menu li section {
+    width: auto;
+    max-width: calc(100vw - 0.5rem);
+  }
   nav figure#logo {
     height: 2rem;
   }
   nav menu {
     gap: 1rem;
   }
+  nav menu li section {
+    width: auto;
+    max-width: 100%;
+    left: 0;
+    margin: 0;
+  }
   nav .hamburger button {
-    height: 2rem;
-    width: 2rem;
+    height: 1.8rem;
+    width: 1.8rem;
     padding: 0.65rem 0.5rem;
   }
   nav:focus-within .hamburger button span:nth-child(1) {
-    transform: translateY(0.315rem) rotate(-45deg);
+    transform: translateY(0.25rem) rotate(-45deg);
   }
   nav:focus-within .hamburger button span:nth-child(2) {
     opacity: 0;
   }
   nav:focus-within .hamburger button span:nth-child(3) {
-    transform: translateY(-0.315rem) rotate(45deg);
+    transform: translateY(-0.25rem) rotate(45deg);
   }
   footer .menu-wrapper .menu-sub-wrapper:last-child {
     flex-direction: column;
