--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -468,6 +468,7 @@ nav {
           color: $new;
         }
         a.arrow-link {
+          flex-grow: 1;
           * {
             display:flex;
             align-items: center;
@@ -1214,13 +1215,13 @@ footer {
       button {
         pointer-events: none;
         span:nth-child(1) {
-          transform: translateY(0.425rem) rotate(-45deg);
+          transform: translateY(0.5rem) rotate(-45deg);
         }
         span:nth-child(2) {
           opacity: 0;
         }
         span:nth-child(3) {
-          transform: translateY(-0.425rem) rotate(45deg);
+          transform: translateY(-0.5rem) rotate(45deg);
         }
       }
     }
@@ -1249,7 +1250,7 @@ footer {
         padding: 1rem 0.75rem;
         cursor: pointer;
         span {
-          flex-basis: 0.12rem;
+          flex-basis: 1%;
           width: 100%;
           background-color: $blue;
           transition: all ease-in-out 0.2s;
@@ -1441,7 +1442,7 @@ footer {
             }
           }
           section {
-            width: 20rem;
+            width: 24rem;
           }
         }
         .cta-button {
@@ -1543,18 +1544,35 @@ footer {
     .list-wrapper {
       background-position: 0;
       margin-block-start: 4rem;
+      menu {
+        li {
+          section {
+            width: auto;
+            max-width: calc(100vw - 0.5rem);
+          }
+        }
+  
+      }
     }
     figure#logo {
       height: 2rem;
     }
     menu {
       gap: 1rem;
+      li {
+        section {
+          width: auto;
+          max-width: 100%;
+          left: 0;
+          margin: 0;
+        }
+      }
 
     }
     .hamburger {
       button {
-        height: 2rem;
-        width: 2rem;
+        height: 1.8rem;
+        width: 1.8rem;
         padding: 0.65rem 0.5rem;
       }
     }
@@ -1564,13 +1582,13 @@ footer {
     .hamburger{
       button{
         span:nth-child(1) {
-          transform: translateY(0.315rem) rotate(-45deg);
+          transform: translateY(0.25rem) rotate(-45deg);
         }
         span:nth-child(2) {
           opacity: 0;
         }
         span:nth-child(3) {
-          transform: translateY(-0.315rem) rotate(45deg);
+          transform: translateY(-0.25rem) rotate(45deg);
         }
       }
     }
