--- a/css/main.css
+++ b/css/main.css
@@ -956,10 +956,11 @@ footer menu a:focus {
   footer .menu-wrapper {
     margin: 0;
     justify-content: flex-start;
-    gap: 2rem;
+    gap: 1.5rem;
   }
   nav .menu-wrapper .menu-sub-wrapper,
   footer .menu-wrapper .menu-sub-wrapper {
+    gap: 1.5rem;
     flex-basis: auto;
   }
   nav .menu-wrapper section,
@@ -1166,7 +1167,7 @@ footer menu a:focus {
     flex-grow: 1;
   }
 }
-@media (max-width: 780px) {
+@media (max-width: 820px) {
   nav {
     padding-inline: 2rem;
   }
@@ -1231,10 +1232,14 @@ footer menu a:focus {
   }
   footer .menu-wrapper {
     flex-direction: column;
+    gap: 2rem;
     margin: 0;
   }
   footer .menu-wrapper section {
     min-width: 22vw;
+  }
+  footer .menu-wrapper .menu-sub-wrapper {
+    gap: 2rem;
   }
 }
 @media (max-width: 480px) {
@@ -1247,8 +1252,8 @@ footer menu a:focus {
     margin-block-start: 4rem;
   }
   nav .list-wrapper menu li section {
+    max-width: 87.5%;
     width: auto;
-    max-width: calc(100vw - 0.5rem);
   }
   nav figure#logo {
     height: 2rem;
