--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1162,9 +1162,10 @@ footer {
     .menu-wrapper {
       margin: 0;
       justify-content: flex-start;
-      gap: 2rem;
+      gap: 1.5rem;
 
       .menu-sub-wrapper {
+        gap: 1.5rem;
         flex-basis: auto;
       }
 
@@ -1430,7 +1431,7 @@ footer {
   }
 }
 
-@media (max-width: 780px) {
+@media (max-width: 820px) {
   nav {
     padding-inline: 2rem;
     .list-wrapper {
@@ -1527,11 +1528,14 @@ footer {
 
     .menu-wrapper {
       flex-direction: column;
+      gap: 2rem;
       margin: 0;
       section {
         min-width: 22vw;
       }
-
+      .menu-sub-wrapper {
+        gap: 2rem;
+      }
     }
   }
 }
@@ -1549,8 +1553,8 @@ footer {
       menu {
         li {
           section {
+            max-width: 87.5%;
             width: auto;
-            max-width: calc(100vw - 0.5rem);
           }
         }
   
