--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1553,8 +1553,8 @@ footer {
       menu {
         li {
           section {
-            max-width: 87.5%;
-            width: auto;
+            max-width: 88%;
+            width: auto!important;
           }
         }
   
