--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -1555,6 +1555,7 @@ footer {
           section {
             max-width: 88%;
             width: auto!important;
+            left: auto!important;
           }
         }
   
