--- a/css/main.css
+++ b/css/main.css
@@ -525,394 +525,6 @@ main section .split {
   grid-template-columns: 1fr 1fr;
   gap: 6rem;
 }
-main section.garden {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-block: 4rem !important;
-}
-main section.garden p.s3 {
-  color: #C2C0D1;
-  margin-block: 2rem;
-}
-main section.garden dl {
-  display: flex;
-  width: 100%;
-  gap: 2rem;
-  margin-inline: auto;
-}
-main section.garden dl div {
-  flex-basis: 12ch;
-}
-main section.garden dl div dd {
-  font-size: 0;
-}
-main section.garden dl div dt {
-  width: 100%;
-  height: 3rem;
-  display: flex;
-  align-items: center;
-  max-width: 10rem;
-  margin: auto;
-}
-main section.garden dl div dt img {
-  width: 100%;
-  object-fit: contain;
-}
-main section.garden dl div:first-child {
-  margin-inline-start: auto;
-}
-main section.garden dl div:last-child {
-  margin-inline-end: auto;
-}
-main section.services {
-  position: relative;
-  border: none;
-  background-color: #0A0A17;
-  border-radius: 8rem 0 8rem 0;
-}
-main section.services h3 {
-  color: #93e4d5;
-}
-main section.services img.floating-dots {
-  position: absolute;
-  top: 0;
-  right: -28rem;
-  height: 48rem;
-  width: 48rem;
-  opacity: 8%;
-  z-index: 0;
-}
-main section.services .intro {
-  position: relative;
-  z-index: 1;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  gap: 2rem;
-  margin-block-end: 6rem;
-}
-main section.services .intro h2,
-main section.services .intro p {
-  margin: 0;
-  text-align: center;
-}
-main section.services .intro h2 {
-  color: #21EAC5;
-}
-main section.services .intro p.t3 {
-  max-width: 28ch;
-}
-main section.services .intro p.p2 {
-  max-width: 64ch;
-  margin-block-end: 2rem;
-  font-weight: 200;
-}
-main section.services .intro p.p2 a {
-  color: #E3FF53;
-}
-main section.services .intro p.p2 a span {
-  display: inline;
-  color: #FFFFFF;
-  transition: color 0.2s ease-in-out;
-}
-main section.services .intro p.p2 a:hover span {
-  color: #E3FF53;
-}
-main section.meeting-cta {
-  background-image: linear-gradient(to left, #8E7FFC, #21EAC5);
-  border-radius: 8rem 0 0;
-  color: #1C1D4E;
-  position: relative;
-  overflow: visible;
-}
-main section.meeting-cta .txt-frame {
-  position: relative;
-  z-index: 1;
-}
-main section.meeting-cta .split {
-  grid-template-columns: 2fr 1fr;
-  gap: 2rem;
-  position: relative;
-}
-main section.meeting-cta .abs.hide-lg {
-  display: none;
-}
-main section.meeting-cta .abs {
-  position: absolute;
-  right: 0;
-  left: 0;
-  top: -16rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  z-index: 0;
-}
-main section.meeting-cta .abs .img-frame {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  overflow: hidden;
-  border-radius: 50%;
-  margin-block-end: 1rem;
-  width: 24rem;
-  aspect-ratio: 1;
-  background-color: rgba(0, 0, 0, 0.062745098);
-}
-main section.meeting-cta .abs .img-frame:after {
-  content: "";
-  position: absolute;
-  border-radius: 50%;
-  inset: 0;
-  aspect-ratio: 1;
-  margin: 4rem;
-  background-color: #1C1D4E;
-}
-main section.meeting-cta .cta-block {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-main section.meeting-cta .cta-block .input-button-wrapper {
-  padding: 0;
-  position: relative;
-  z-index: 1;
-  margin-block-start: 12rem;
-}
-main section.meeting-cta p {
-  max-width: 50ch;
-}
-main section.meeting-cta p .highlight {
-  display: inline;
-  color: #FFFFFF;
-}
-main section.meeting-cta .t2 {
-  margin-block: 2rem;
-  font-weight: 300;
-  max-width: 16ch;
-}
-main section.resources {
-  background-color: #F2F1FF;
-  border-radius: 8rem 0 0;
-  color: #1C1D4E;
-}
-main section.resources .split {
-  margin-block-end: 8rem;
-}
-main section.resources h2.t2 {
-  margin-block-start: 8rem;
-}
-main section.resources .tag-group {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-  padding-block-start: 2rem;
-  margin-block-start: auto;
-}
-main section.resources .tag-group .tag {
-  padding: 0.25rem 1rem;
-  background-color: #c9c2fe;
-  border-radius: 2rem;
-}
-main section.resources .tag-group .callout {
-  padding: 0.25rem 1rem;
-  background-color: #a6f6e8;
-  border-radius: 2rem;
-  text-align: center;
-}
-main section.resources .input-button-wrapper {
-  display: flex;
-  justify-content: center;
-  padding: 0;
-  margin-block-start: 4rem;
-}
-main section.resources ul.card-list {
-  margin-block-start: 4rem;
-  padding: 0;
-  border: 0;
-  gap: 4rem;
-}
-main section.resources ul.card-list li {
-  display: flex;
-  flex-direction: column;
-  border-radius: 0;
-  background-color: transparent;
-  padding-block-start: 2rem;
-  border-top: 0.25rem solid;
-  border-image-slice: 1;
-  border-image-source: linear-gradient(to left, #8E7FFC, #21EAC5);
-  transition: box-shadow 0.2s ease-in-out;
-  cursor: auto;
-}
-main section.resources ul.card-list li .pad {
-  padding: 2rem;
-}
-main section.resources ul.card-list li.alt:hover {
-  box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.1254901961);
-  cursor: pointer;
-}
-main section.resources ul.card-list li.alt {
-  display: flex;
-  flex-direction: column;
-  background: #FFFFFF;
-  border-radius: 4rem 0 0;
-  padding: 3rem 2rem 2rem;
-  border-bottom: 0.25rem solid;
-  border-top: 0;
-  border-image-source: linear-gradient(to right, #8E7FFC, #21EAC5);
-}
-main section.resources ul.card-list li.alt p + p {
-  margin-block-start: 1rem;
-}
-main section.resources ul.card-list li.alt p {
-  margin-block-start: 0;
-}
-main section.resources ul.card-list li.alt.img {
-  border-radius: 0 0 4rem;
-  border: 0;
-  padding: 0;
-}
-main section.resources ul.card-list h3 {
-  border: 0;
-  padding: 0;
-  font-weight: 400;
-  letter-spacing: -0.025em;
-}
-main section.resources ul.card-list p {
-  padding: 0;
-  font-weight: 400;
-  margin-block-start: auto;
-}
-main section.resources ul.card-list p.s1 {
-  font-weight: 500;
-  letter-spacing: 0.1em;
-}
-main section.resources ul.card-list li:hover p {
-  background-color: transparent;
-}
-main section.research {
-  border: none;
-}
-main section.research .intro {
-  display: flex;
-  flex-direction: column;
-}
-main section.research .intro h2 {
-  margin-block-end: 2rem;
-  color: #21EAC5;
-}
-main section.research .intro p {
-  margin: 0;
-}
-main section.research .intro p.p1 {
-  max-width: 64ch;
-  font-weight: 200;
-}
-main section.research .intro .input-button-wrapper {
-  display: flex;
-  gap: 4rem;
-  padding: 0;
-  margin-block-start: 2rem;
-  justify-content: flex-start;
-}
-main ul.card-list {
-  position: relative;
-  z-index: 1;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 4rem 2rem;
-  margin: 2rem 0 0;
-  padding: 2rem 0 0;
-  border-top: 0.1rem #383745 solid;
-  list-style-type: none;
-}
-main ul.card-list li {
-  border-radius: 0 0 2rem 0;
-  overflow: hidden;
-  align-items: stretch;
-  cursor: pointer;
-  transition: background-color 0.2s ease-in-out;
-}
-main ul.card-list li h3 {
-  padding-block-end: 2rem;
-  margin-block-end: 2rem;
-  border-bottom: 0.1rem #383745 solid;
-}
-main ul.card-list li .cta-block {
-  position: relative;
-  display: flex;
-  align-items: center;
-  min-height: 22rem;
-}
-main ul.card-list li .cta-block .cta-button {
-  margin: auto;
-}
-main ul.card-list li .cta-block .cta-button a {
-  position: relative;
-  margin: 0;
-  z-index: 1;
-  text-decoration: none;
-}
-main ul.card-list li .cta-block::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  background-image: url("https://raw.githubusercontent.com/icscreative/scd/6a274db1b311e023701fe68e1abade8cde822cf9/img/dots.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  opacity: 12%;
-  z-index: 0;
-}
-main ul.card-list li .img-frame {
-  padding: 1rem 2rem;
-  background-color: #1C1D4E;
-  height: 8rem;
-  display: flex;
-  align-items: flex-end;
-  justify-content: stretch;
-  border-bottom: 0.25rem solid;
-  border-image-slice: 1;
-  border-image-source: linear-gradient(to right, #8E7FFC, #21EAC5);
-}
-main ul.card-list li .img-frame a.arrow-link {
-  display: flex;
-  color: #FFFFFF;
-  text-decoration: none;
-  width: 100%;
-}
-main ul.card-list li .img-frame a.arrow-link > * {
-  width: 100%;
-  font-size: 1.5rem;
-}
-main ul.card-list li .img-frame a.arrow-link > *::after {
-  margin-inline-start: auto;
-  margin-block: auto 0.2rem;
-  margin-inline-start: 1rem;
-}
-main ul.card-list li p {
-  padding: 2rem;
-  margin: 0;
-  font-weight: 200;
-}
-main ul.card-list li p span {
-  display: inline;
-}
-main ul.card-list li:hover p {
-  background-color: #383745;
-}
-main ul.card-list li:nth-child(4) {
-  order: 1;
-}
-main ul.card-list li:nth-child(5) {
-  order: 2;
-}
-main ul.card-list li:last-child:hover {
-  background-color: transparent;
-  cursor: auto;
-}
 main section + section {
   padding-block-start: 2rem;
   border-top: 0.1em solid #dcdde4;
@@ -1220,6 +832,394 @@ main#home {
 main#home section {
   padding: 8rem 6rem;
 }
+main#home section.garden {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-block: 4rem;
+}
+main#home section.garden p.s3 {
+  color: #C2C0D1;
+  margin-block: 2rem;
+}
+main#home section.garden dl {
+  display: flex;
+  width: 100%;
+  gap: 2rem;
+  margin-inline: auto;
+}
+main#home section.garden dl div {
+  flex-basis: 12ch;
+}
+main#home section.garden dl div dd {
+  font-size: 0;
+}
+main#home section.garden dl div dt {
+  width: 100%;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  max-width: 10rem;
+  margin: auto;
+}
+main#home section.garden dl div dt img {
+  width: 100%;
+  object-fit: contain;
+}
+main#home section.garden dl div:first-child {
+  margin-inline-start: auto;
+}
+main#home section.garden dl div:last-child {
+  margin-inline-end: auto;
+}
+main#home section.services {
+  position: relative;
+  border: none;
+  background-color: #0A0A17;
+  border-radius: 8rem 0 8rem 0;
+}
+main#home section.services h3 {
+  color: #93e4d5;
+}
+main#home section.services img.floating-dots {
+  position: absolute;
+  top: 0;
+  right: -28rem;
+  height: 48rem;
+  width: 48rem;
+  opacity: 8%;
+  z-index: 0;
+}
+main#home section.services .intro {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 2rem;
+  margin-block-end: 6rem;
+}
+main#home section.services .intro h2,
+main#home section.services .intro p {
+  margin: 0;
+  text-align: center;
+}
+main#home section.services .intro h2 {
+  color: #21EAC5;
+}
+main#home section.services .intro p.t3 {
+  max-width: 28ch;
+}
+main#home section.services .intro p.p2 {
+  max-width: 64ch;
+  margin-block-end: 2rem;
+  font-weight: 200;
+}
+main#home section.services .intro p.p2 a {
+  color: #E3FF53;
+}
+main#home section.services .intro p.p2 a span {
+  display: inline;
+  color: #FFFFFF;
+  transition: color 0.2s ease-in-out;
+}
+main#home section.services .intro p.p2 a:hover span {
+  color: #E3FF53;
+}
+main#home section.meeting-cta {
+  background-image: linear-gradient(to left, #8E7FFC, #21EAC5);
+  border-radius: 8rem 0 0;
+  color: #1C1D4E;
+  position: relative;
+  overflow: visible;
+}
+main#home section.meeting-cta .txt-frame {
+  position: relative;
+  z-index: 1;
+}
+main#home section.meeting-cta .split {
+  grid-template-columns: 2fr 1fr;
+  gap: 2rem;
+  position: relative;
+}
+main#home section.meeting-cta .abs.hide-lg {
+  display: none;
+}
+main#home section.meeting-cta .abs {
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: -16rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 0;
+}
+main#home section.meeting-cta .abs .img-frame {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-radius: 50%;
+  margin-block-end: 1rem;
+  width: 24rem;
+  aspect-ratio: 1;
+  background-color: rgba(0, 0, 0, 0.062745098);
+}
+main#home section.meeting-cta .abs .img-frame:after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  inset: 0;
+  aspect-ratio: 1;
+  margin: 4rem;
+  background-color: #1C1D4E;
+}
+main#home section.meeting-cta .cta-block {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+main#home section.meeting-cta .cta-block .input-button-wrapper {
+  padding: 0;
+  position: relative;
+  z-index: 1;
+  margin-block-start: 12rem;
+}
+main#home section.meeting-cta p {
+  max-width: 50ch;
+}
+main#home section.meeting-cta p .highlight {
+  display: inline;
+  color: #FFFFFF;
+}
+main#home section.meeting-cta .t2 {
+  margin-block: 2rem;
+  font-weight: 300;
+  max-width: 16ch;
+}
+main#home section.resources {
+  background-color: #F2F1FF;
+  border-radius: 8rem 0 0;
+  color: #1C1D4E;
+}
+main#home section.resources .split {
+  margin-block-end: 8rem;
+}
+main#home section.resources h2.t2 {
+  margin-block-start: 8rem;
+}
+main#home section.resources .tag-group {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  padding-block-start: 2rem;
+  margin-block-start: auto;
+}
+main#home section.resources .tag-group .tag {
+  padding: 0.25rem 1rem;
+  background-color: #c9c2fe;
+  border-radius: 2rem;
+}
+main#home section.resources .tag-group .callout {
+  padding: 0.25rem 1rem;
+  background-color: #a6f6e8;
+  border-radius: 2rem;
+  text-align: center;
+}
+main#home section.resources .input-button-wrapper {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin-block-start: 4rem;
+}
+main#home section.resources ul.card-list {
+  margin-block-start: 4rem;
+  padding: 0;
+  border: 0;
+  gap: 4rem;
+}
+main#home section.resources ul.card-list li {
+  display: flex;
+  flex-direction: column;
+  border-radius: 0;
+  background-color: transparent;
+  padding-block-start: 2rem;
+  border-top: 0.25rem solid;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(to left, #8E7FFC, #21EAC5);
+  transition: box-shadow 0.2s ease-in-out;
+  cursor: auto;
+}
+main#home section.resources ul.card-list li .pad {
+  padding: 2rem;
+}
+main#home section.resources ul.card-list li.alt:hover {
+  box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.1254901961);
+  cursor: pointer;
+}
+main#home section.resources ul.card-list li.alt {
+  display: flex;
+  flex-direction: column;
+  background: #FFFFFF;
+  border-radius: 4rem 0 0;
+  padding: 3rem 2rem 2rem;
+  border-bottom: 0.25rem solid;
+  border-top: 0;
+  border-image-source: linear-gradient(to right, #8E7FFC, #21EAC5);
+}
+main#home section.resources ul.card-list li.alt p + p {
+  margin-block-start: 1rem;
+}
+main#home section.resources ul.card-list li.alt p {
+  margin-block-start: 0;
+}
+main#home section.resources ul.card-list li.alt.img {
+  border-radius: 0 0 4rem;
+  border: 0;
+  padding: 0;
+}
+main#home section.resources ul.card-list h3 {
+  border: 0;
+  padding: 0;
+  font-weight: 400;
+  letter-spacing: -0.025em;
+}
+main#home section.resources ul.card-list p {
+  padding: 0;
+  font-weight: 400;
+  margin-block-start: auto;
+}
+main#home section.resources ul.card-list p.s1 {
+  font-weight: 500;
+  letter-spacing: 0.1em;
+}
+main#home section.resources ul.card-list li:hover p {
+  background-color: transparent;
+}
+main#home section.research {
+  border: none;
+}
+main#home section.research .intro {
+  display: flex;
+  flex-direction: column;
+}
+main#home section.research .intro h2 {
+  margin-block-end: 2rem;
+  color: #21EAC5;
+}
+main#home section.research .intro p {
+  margin: 0;
+}
+main#home section.research .intro p.p1 {
+  max-width: 64ch;
+  font-weight: 200;
+}
+main#home section.research .intro .input-button-wrapper {
+  display: flex;
+  gap: 4rem;
+  padding: 0;
+  margin-block-start: 2rem;
+  justify-content: flex-start;
+}
+main#home ul.card-list {
+  position: relative;
+  z-index: 1;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 4rem 2rem;
+  margin: 2rem 0 0;
+  padding: 2rem 0 0;
+  border-top: 0.1rem #383745 solid;
+  list-style-type: none;
+}
+main#home ul.card-list li {
+  border-radius: 0 0 2rem 0;
+  overflow: hidden;
+  align-items: stretch;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+main#home ul.card-list li h3 {
+  padding-block-end: 2rem;
+  margin-block-end: 2rem;
+  border-bottom: 0.1rem #383745 solid;
+}
+main#home ul.card-list li .cta-block {
+  position: relative;
+  display: flex;
+  align-items: center;
+  min-height: 22rem;
+}
+main#home ul.card-list li .cta-block .cta-button {
+  margin: auto;
+}
+main#home ul.card-list li .cta-block .cta-button a {
+  position: relative;
+  margin: 0;
+  z-index: 1;
+  text-decoration: none;
+}
+main#home ul.card-list li .cta-block::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-image: url("https://raw.githubusercontent.com/icscreative/scd/6a274db1b311e023701fe68e1abade8cde822cf9/img/dots.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 12%;
+  z-index: 0;
+}
+main#home ul.card-list li .img-frame {
+  padding: 1rem 2rem;
+  background-color: #1C1D4E;
+  height: 8rem;
+  display: flex;
+  align-items: flex-end;
+  justify-content: stretch;
+  border-bottom: 0.25rem solid;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(to right, #8E7FFC, #21EAC5);
+}
+main#home ul.card-list li .img-frame a.arrow-link {
+  display: flex;
+  color: #FFFFFF;
+  text-decoration: none;
+  width: 100%;
+}
+main#home ul.card-list li .img-frame a.arrow-link > * {
+  width: 100%;
+  font-size: 1.5rem;
+}
+main#home ul.card-list li .img-frame a.arrow-link > *::after {
+  margin-inline-start: auto;
+  margin-block: auto 0.2rem;
+  margin-inline-start: 1rem;
+}
+main#home ul.card-list li p {
+  padding: 2rem;
+  margin: 0;
+  font-weight: 200;
+}
+main#home ul.card-list li p span {
+  display: inline;
+}
+main#home ul.card-list li:hover p {
+  background-color: #383745;
+}
+main#home ul.card-list li:nth-child(4) {
+  order: 1;
+}
+main#home ul.card-list li:nth-child(5) {
+  order: 2;
+}
+main#home ul.card-list li:last-child:hover {
+  background-color: transparent;
+  cursor: auto;
+}
 main#home header {
   padding-block: 6rem 4rem;
 }
@@ -1423,6 +1423,9 @@ footer menu a:focus {
   }
   main section .split {
     gap: 4rem;
+  }
+  main section.services {
+    border-radius: 4rem 0 4rem 0;
   }
   main section.resources, main section.meeting-cta {
     border-radius: 4rem 0 0;
@@ -1768,9 +1771,12 @@ footer menu a:focus {
   main#home section ul.card-list li .cta-block {
     min-height: 24rem;
   }
+  main#home section.garden {
+    padding-block-start: 0;
+  }
   main#home section.garden dl {
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     gap: 2rem;
   }
   main#home section.garden dl div {
@@ -1778,6 +1784,10 @@ footer menu a:focus {
   }
   main#home section.garden dl div:first-child {
     margin: 0;
+  }
+  main#home section.garden dl dt img {
+    max-width: 6rem;
+    margin: auto;
   }
   main .txt-style-wrapper > p {
     padding-inline: 2rem;
