--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -610,12 +610,11 @@ main {
   overflow: hidden;
 
   header {
-    display: flex;
-    align-items: stretch;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 
     h1 {
-      font-size: 10vw;
-      font-weight: inherit;
+    max-width: 12ch;
     }
 
     >div {
@@ -624,7 +623,7 @@ main {
 
     .split {
       display: flex;
-      gap: $lg;
+      gap: 2rem;
       margin-block: 2rem;
 
       div {
@@ -634,7 +633,7 @@ main {
 
     .input-button-wrapper {
       padding: 0;
-      margin-inline: auto;
+      margin-inline: 0 auto;
 
       .cta-button {
         a {
@@ -1027,10 +1026,13 @@ main {
   }
 }
 
-main#home {
+#home {
   border-top: 0.1rem $night solid;
   background-color: $black;
   color: $white;
+  .pad {
+    padding: 2rem;
+  }
   section {
     padding: 8rem 6rem;
   }
@@ -1164,7 +1166,7 @@ main#home {
       position: absolute;
       right: 0;
       left: 0;
-      top: -16rem;
+      top: -18rem;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -1200,7 +1202,7 @@ main#home {
         padding: 0;
         position: relative;
         z-index: 1;
-        margin-block-start: 12rem;
+        margin-block-start: 6rem;
       }
     }
     p {
@@ -1267,9 +1269,6 @@ main#home {
         border-image-source: linear-gradient(to left, $purple, $teal);
         transition: box-shadow 0.2s ease-in-out;
         cursor: auto;
-        .pad {
-          padding: 2rem;
-        }
       }
       li.alt:hover {
         box-shadow: 0 1rem 1rem #00000020;
@@ -1280,7 +1279,7 @@ main#home {
         flex-direction: column;
         background: $white;
         border-radius: 4rem 0 0;
-        padding: 3rem 2rem 2rem;
+        padding-block: 3rem 2rem;
         border-bottom: 0.25rem solid;
         border-top: 0;
         border-image-source: linear-gradient(to right, $purple, $teal);
@@ -1353,6 +1352,7 @@ main#home {
     border-top: 0.1rem $night solid;
     list-style-type: none;
     li {
+      max-width: 55ch;
       border-radius: 0 0 2rem 0;
       overflow: hidden;
       align-items: stretch;
@@ -1411,7 +1411,6 @@ main#home {
           >*::after {
           margin-inline-start: auto;
           margin-block: auto 0.2rem;
-          margin-inline-start: 1rem;
           }
         }
       }
@@ -1440,7 +1439,8 @@ main#home {
   }
 
   header {
-    padding-block: 6rem 4rem;
+    padding: 6rem;
+    padding-block-end: 0;
     .txt-frame {
       position: relative;
       z-index: 1;
@@ -1619,6 +1619,11 @@ footer {
   :root {
     font-size: $md;
   }
+  main {
+    header {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
 }
 
 @media (max-width: 1440px) {
@@ -1631,7 +1636,7 @@ footer {
     padding-inline: 4rem;
   }
 
-  main#home {
+  #home {
     section, header {
       padding-inline: 4rem;
     }
@@ -1665,11 +1670,9 @@ footer {
     }
   }
 
-  main#home {
-    // p {
-    //   max-width: 64ch;
-    // }
+  #home {
     header {
+      grid-template-columns: 1fr 1fr;
       .vid-frame {
         video {
           height: 86vh;
@@ -1759,7 +1762,7 @@ footer {
     }
   }
 
-  main#home {
+  #home {
     section, header {
       padding-inline: 4rem;
     }
@@ -1783,18 +1786,19 @@ footer {
       border-radius: 4rem 0 0;
     }
     section.meeting-cta {
-      padding: 12rem 4rem 4rem;
+      .cta-block {
+        .input-button-wrapper {
+          margin-block-start: 2rem;
+        }
+      }
+      padding-block: 8rem 4rem;
       .abs {
+        top: -14rem;
         .img-frame {
           width: 20rem;
         }
         .img-frame:after {
           margin: 2rem;
-        }
-      }
-      .cta-block {
-        .input-button-wrapper {
-          margin-block-start: 6rem;
         }
       }
     }
@@ -1810,27 +1814,6 @@ footer {
             min-height: 16rem;
           }
         }
-      }
-    }
-    section.meeting-cta {
-      padding-block-start: 12rem;
-      .abs {
-        top:-9rem;
-        .img-frame {
-          margin-inline: auto;
-          width: 18rem;
-        }
-      }
-      .cta-block {
-        .input-button-wrapper {
-          margin: 0;
-        }
-      }
-      .abs.hide-sm {
-        display: none;
-      }
-      .abs.hide-lg {
-        display: initial;
       }
     }
   }
@@ -1851,11 +1834,7 @@ footer {
     .input-button-wrapper {
       flex-wrap: wrap;
       gap: 2rem;
-
-      div {
-        flex-basis: 33vw;
-        flex-grow: 1;
-      }
+      justify-content: space-evenly;
     }
   }
 
@@ -2100,13 +2079,40 @@ footer {
     }
   }
 }
-
 @media (max-width: 820px) {
+  nav,
+  footer,
+  #home section,
+  #home header {
+    padding-inline: 1rem;
+  }
+  #home {
+    section.meeting-cta {
+      .abs {
+        .img-frame {
+          width: 17rem;
+        }
+        .img-frame:after {
+          margin: 1.5rem;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 700px) {
+  nav,
+  #home section,
+  #home header {
+    padding-inline: 4rem;
+  }
   nav {
-    padding-inline: 2rem;
-
+    .hamburger {
+      button {
+        margin-inline-end: -3rem;
+      }
+    }
     .list-wrapper {
-      padding: 2rem;
+      padding: 1rem;
 
       menu {
         li {
@@ -2148,30 +2154,25 @@ footer {
     }
   }
 
-  main#home {
-    section, header {
-      padding-inline: 2rem;
-    }
+  #home {
     header {
-      flex-direction: column;
-      padding-block-start: 30vh;
+      padding-block-start: 24vh;
+      grid-template-columns: 1fr;
       .vid-frame {
         video {
-          height: 50vh;
+          height: 46vh;
         }
       }
       >div {
         flex-basis: 100%;
       }
       .split {
-        flex-direction: row;
         .input-button-wrapper {
-          margin-inline: auto;
         }
       }
       h1 {
         margin:0;
-        font-size: 18vw;
+        font-size: 16vw;
       }
     }
     section {
@@ -2205,7 +2206,20 @@ footer {
       }
     }
     section.meeting-cta {
-      padding-inline: 2rem;
+      padding-block-start: 12rem;
+      .cta-block {
+        position: static;
+        .input-button-wrapper {
+          margin-block-start: 0;
+        }
+      }
+      .abs {
+        top:-20rem;
+        .img-frame {
+          margin-inline: auto;
+          width: 18rem;
+        }
+      }
       .split {
         grid-template-columns: 1fr;
       }
@@ -2215,7 +2229,7 @@ footer {
   main {
     .txt-style-wrapper {
       >p {
-        padding-inline: 2rem;
+        padding-inline: 4rem;
       }
 
       p:first-child,
@@ -2227,7 +2241,7 @@ footer {
     .color-wrapper,
     .input-button-wrapper,
     .text-input-wrapper {
-      padding-inline: 2rem;
+      padding-inline: 4rem;
     }
 
     .t1 {
@@ -2261,7 +2275,6 @@ footer {
 
     .text-input-wrapper {
       width: auto;
-      justify-content: flex-start;
     }
   }
 
@@ -2289,18 +2302,18 @@ footer {
 
   nav,
   footer {
-    padding-inline: 1rem;
+    padding: 0.35rem 1rem;
   }
 
   nav {
     .list-wrapper {
       background-position: 0;
-      margin-block-start: 4rem;
+      margin-block-start: 2.7rem;
 
       menu {
         li {
           section {
-            max-width: 88%;
+            max-width: 94%;
             width: auto !important;
             left: auto !important;
           }
@@ -2332,6 +2345,7 @@ footer {
         height: 1.8rem;
         width: 1.8rem;
         padding: 0.65rem 0.5rem;
+        margin: 0;
       }
     }
 
@@ -2371,10 +2385,13 @@ footer {
     }
   }
 
-  main#home {
+  #home {
     section, header {
       padding-inline: 1rem;
       padding-block-start: 6rem;
+    }
+    .pad {
+      padding-inline: 1rem;
     }
     header {
       padding-block-start: 28vh;
@@ -2388,7 +2405,6 @@ footer {
     }
     section.meeting-cta {
       padding-inline: 1rem;
-      padding-block-end: 2rem;
       .t2 {
         font-size: 2.5rem;
       }
