--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -645,7 +645,6 @@ main {
   }
 
   p {
-    margin-block-start: 2rem;
     span {
       display: block;
       max-width: 48ch;
@@ -1392,7 +1391,9 @@ main {
       .img-frame {
         padding: 1rem 2rem;
         background-color: $blue;
-        height: 8rem;
+        min-height: 10rem;
+        max-height: 16rem;
+        height: 22vh;
         display: flex;
         align-items: flex-end;
         justify-content: stretch;
@@ -1418,6 +1419,7 @@ main {
         padding: 2rem;
         margin: 0;
         font-weight: 200;
+        transition: background-color 0.2s ease-in-out;
         span {
           display: inline;
         }
@@ -2087,6 +2089,14 @@ footer {
     padding-inline: 1rem;
   }
   #home {
+    ul.card-list {
+      gap: 2em 1rem;
+    }
+    section.resources {
+      ul.card-list {
+        gap: 2rem 1rem;
+      }
+    }
     section.meeting-cta {
       .abs {
         .img-frame {
@@ -2183,6 +2193,14 @@ footer {
             min-height: 24rem;
           }
         }
+      }
+    }
+    section.resources {
+      ul.card-list {
+        li.alt.img {
+          border-radius: 0 0 2rem;
+        }
+        
       }
     }
     section.garden {
@@ -2394,7 +2412,7 @@ footer {
       padding-inline: 1rem;
     }
     header {
-      padding-block-start: 28vh;
+      padding-block-start: 22vh;
       .split {
         flex-direction: column;
         justify-content: flex-start;
@@ -2403,10 +2421,34 @@ footer {
         }
       }
     }
+    section {
+      ul.card-list {
+        li {
+          .img-frame, p {
+            padding-inline: 0.5rem;
+          }
+        }
+      }
+    }
+    section.garden {
+      dl {
+        gap: 1rem 0;
+      }
+    }
     section.meeting-cta {
       padding-inline: 1rem;
+      border-radius: 2rem 0 0;
       .t2 {
         font-size: 2.5rem;
+      }
+    }
+    section.resources {
+      border-radius: 2rem 0 0;
+      ul.card-list {
+        li.alt {
+          border-radius: 2rem 0 0;
+        }
+
       }
     }
   }
@@ -2427,6 +2469,49 @@ footer {
     .input-button-wrapper,
     .text-input-wrapper {
       padding-inline: 1rem;
+    }
+  }
+}
+
+@media (max-width: 412px) {
+
+  nav,
+  footer {
+    padding: 0.35rem 0.5rem;
+  }
+
+  #home {
+    section, header {
+      padding-inline: 0.5rem;
+      padding-block-start: 4rem;
+    }
+    .pad {
+      padding-inline: 0.5rem;
+    }
+    header {
+      padding-block-start: 18vh;
+    }
+    section.meeting-cta {
+      padding-inline: 0.5rem;
+    }
+  }
+
+  main {
+    .txt-style-wrapper {
+      >p {
+        padding-inline: 0.5rem;
+      }
+
+      p:first-child,
+      p:last-child {
+        padding-block: 0.5rem;
+      }
+    }
+
+    .color-wrapper,
+    .input-button-wrapper,
+    .text-input-wrapper {
+      padding-inline: 0.5rem;
     }
   }
 }
